<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/security_text"
        android:layout_width="153dp"
        android:layout_height="31dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/security"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="16dp"
        android:elevation="16dp"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/security_text" >
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/sos_text"
        android:text="@string/sos"
        android:textSize="22sp"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/pink_card"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>


    <TextView
        android:id="@+id/sos_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:width="0dp"
        android:elevation="16dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/sos_text"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        app:layout_constraintEnd_toEndOf="@+id/pink_card"
        app:layout_constraintEnd_toStartOf="@+id/sos_image"
        android:text="@string/sos_testMessage"
        android:textColor="@color/white" />


    <ImageView
        android:id="@+id/sos_image"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@+id/pink_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card"
        app:layout_constraintEnd_toEndOf="@+id/pink_card"
        android:layout_width="96dp"
        android:layout_height="96dp"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/green_card"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="16dp"
        app:cardElevation="16dp"
        android:elevation="16dp"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pink_card" />

    <TextView
        android:id="@+id/guard_text"
        android:text="@string/guard"
        android:textSize="22sp"
        android:elevation="16dp"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/green_card"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/guard_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:width="0dp"
        android:elevation="16dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/guard_text"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        app:layout_constraintEnd_toEndOf="@+id/green_card"
        app:layout_constraintEnd_toStartOf="@+id/guard_image"
        android:text="@string/guard_testMessage"
        android:textColor="@color/white" />


    <ImageView
        android:id="@+id/guard_image"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:src="@drawable/ic_shield"
        app:layout_constraintBottom_toBottomOf="@+id/green_card"
        app:layout_constraintTop_toTopOf="@+id/green_card"
        app:layout_constraintEnd_toEndOf="@+id/green_card"
        android:layout_width="96dp"
        android:layout_height="96dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>